--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
   postgres:
     image: postgres:16
-    container_name: meu_postgres-prova
+    container_name: meu_postgres
     environment:
-      POSTGRES_USER: mello
+      POSTGRES_USER: mellojr
       POSTGRES_PASSWORD: Jaime2024
-      POSTGRES_DB: prova_db_postgres
+      POSTGRES_DB: prova_db
     ports:
       - "5432:5432"
     volumes:
